[package]
name = "diviner"
description = "Diviner, a deterministic testing framework"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-task = "1.3.1"
futures = "0.3.1"
pin-utils = "0.1.0-alpha.4"
rand = "0.7.3"
rand_chacha = "0.2.2"

[dev-dependencies]
byteorder = "1.3.4"
